MFC r310089: ifconfig: do not truncate SSID in verbose mode.

Fix 32-character SSID abbreviation for 'ifconfig -v wlan0 scan' command.

PR:		215301
Submitted by:	<ms-freebsd-bugzilla@stoffnet.at>

Former-commit-id: d0bf8fd56ab9953b1efef690007c44a6d2a50746